[metadata]
name = cronwrap
version = 0.1.0
description = Lightweight wrapper around cron jobs with retry logic and failure notifications
long_description = file: README.md
long_description_content_type = text/markdown
author = cronwrap contributors
license = MIT
python_requires = >=3.8

[options]
packages = find:
package_dir =
    = .

[options.entry_points]
console_scripts =
    cronwrap = cronwrap.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
